@@ -644,7 +644,7 @@ ORIG keeps original position
 ORIGLINE keeps line where compute started
 CLOSING is t when started at a char delimiting a list as \"]})\"
 LINE indicates being not at origline now
-NESTING tells repeated executing was started from inside a list
+NESTING is currently ignored, if executing from inside a list
 REPEAT counter enables checks against `py-max-specpdl-size'
 INDENT-OFFSET allows calculation of block-local values
 LIEP stores line-end-position at point-of-interest
@@ -743,66 +743,54 @@ LIEP stores line-end-position at point-of-interest
 			 (current-column))
 			;; lists
 			((nth 1 pps)
-			 (if
-			     ;; ((and nesting (not line))
-			     nesting
-			     ;; still at original line
-			     (save-excursion
-			       (goto-char (nth 1 pps))
-			       (setq this-line (py-count-lines))
-			       (cond
-				((< 0 (- origline this-line))
-				 (if (< 1 (- origline this-line))
-				     (cond
-				      (closing
-				       (cond
-					(py-closing-list-dedents-bos
-					 (goto-char (nth 1 pps))
-					 (current-indentation))
-					((looking-back "^[ \t]*")
-					 (current-column))
-					((and (looking-at "\\s([ \t]*$") py-closing-list-keeps-space)
-					 (+ (current-column) py-closing-list-space))
-					((looking-at "\\s([ \t]*$")
-					 (py--empty-arglist-indent nesting py-indent-offset indent-offset))
-					((looking-at "\\s([ \t]*\\([^ \t]+.*\\)$")
-					 (goto-char (match-beginning 1))
-					 (if py-indent-paren-spanned-multilines-p
-					     (+ (current-column) py-indent-offset)
-					   (current-column)))
-					(t (py--fetch-previous-indent orig))))
-				      ;; already behind a dedented element in list
-				      ((<= 2 (- origline this-line))
-				       (py--fetch-previous-indent orig))
-				      ((< (current-indentation) (current-column))
-				       (+ (current-indentation) py-indent-offset))
-				      (t (py--fetch-previous-indent orig)))
-				   (cond ((looking-at "\\s([ \t]*$")
-					  (py--empty-arglist-indent nesting py-indent-offset indent-offset))
-					 ((looking-at "\\s([ \t]*\\([^ \t]+.*\\)$")
-					  (goto-char (match-beginning 1))
-					  (if py-indent-paren-spanned-multilines-p
-					      (+ (current-column) py-indent-offset)
-					    (current-column)))
-					 (t (+ (current-column) (* (nth 0 pps)))))))
-				((nth 1 (parse-partial-sexp (point-min) (point)))
-				 (goto-char (nth 1 (parse-partial-sexp (point-min) (point))))
-				 (setq line
-				       ;; should be faster
-				       (< (line-end-position) liep))
-				 (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
-				((not (py--beginning-of-statement-p))
-				 (py-backward-statement)
-				 (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
-				(t (1+ (current-column)))))
-			   (if line
-			       (progn
-				 (py-backward-statement)
-				 (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
-			     (goto-char (+ py-lhs-inbound-indent (nth 1 pps)))
-			     (when (looking-at "[ \t]+")
-			       (goto-char (match-end 0)))
-			     (current-column))))
+			 (save-excursion
+			   (goto-char (nth 1 pps))
+			   (setq this-line (py-count-lines))
+			   (cond
+			    ((< 0 (- origline this-line))
+			     (if (< 1 (- origline this-line))
+				 (cond
+				  (closing
+				   (cond
+				    (py-closing-list-dedents-bos
+				     (goto-char (nth 1 pps))
+				     (current-indentation))
+				    ((looking-back "^[ \t]*")
+				     (current-column))
+				    ((and (looking-at "\\s([ \t]*$") py-closing-list-keeps-space)
+				     (+ (current-column) py-closing-list-space))
+				    ((looking-at "\\s([ \t]*$")
+				     (py--empty-arglist-indent nesting py-indent-offset indent-offset))
+				    ((looking-at "\\s([ \t]*\\([^ \t]+.*\\)$")
+				     (goto-char (match-beginning 1))
+				     (if py-indent-paren-spanned-multilines-p
+					 (+ (current-column) py-indent-offset)
+				       (current-column)))
+				    (t (py--fetch-previous-indent orig))))
+				  ;; already behind a dedented element in list
+				  ((<= 2 (- origline this-line))
+				   (py--fetch-previous-indent orig))
+				  ((< (current-indentation) (current-column))
+				   (+ (current-indentation) py-indent-offset))
+				  (t (py--fetch-previous-indent orig)))
+			       (cond ((looking-at "\\s([ \t]*$")
+				      (py--empty-arglist-indent nesting py-indent-offset indent-offset))
+				     ((looking-at "\\s([ \t]*\\([^ \t]+.*\\)$")
+				      (goto-char (match-beginning 1))
+				      (if py-indent-paren-spanned-multilines-p
+					  (+ (current-column) py-indent-offset)
+					(current-column)))
+				     (t (+ (current-column) (* (nth 0 pps)))))))
+			    ((nth 1 (parse-partial-sexp (point-min) (point)))
+			     (goto-char (nth 1 (parse-partial-sexp (point-min) (point))))
+			     (setq line
+				   ;; should be faster
+				   (< (line-end-position) liep))
+			     (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
+			    ((not (py--beginning-of-statement-p))
+			     (py-backward-statement)
+			     (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
+			    (t (1+ (current-column))))))
 			((and (eq (char-after) (or ?\( ?\{ ?\[)) line)
 			 (1+ (current-column)))
 			((py-preceding-line-backslashed-p)
